<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_habitos"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/menu_habitos" />
        <item
            android:id="@+id/nav_kai"
            android:icon="@drawable/bb_jugueton_boca_arriba"
            android:title="@string/menu_kai" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/menu_perfil" />
    </group>
</menu>