<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_habitos"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_habitos" />
        <item
            android:id="@+id/nav_kai"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_kai" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_perfil" />
    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/menu_login" />
        </menu>
    </item>
</menu>
