<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.roma.kai.ui.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.roma.kai.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_habitos"
        android:name="com.roma.kai.ui.HabitosFragment"
        android:label="@string/menu_habitos"
        tools:layout="@layout/fragment_habitos" />

    <fragment
        android:id="@+id/nav_kai"
        android:name="com.roma.kai.ui.KaiFragment"
        android:label="@string/menu_kai"
        tools:layout="@layout/fragment_kai" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.roma.kai.ui.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>
